--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
+    "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "tailwindcss": "^4",
+    "typescript": "^5.9.2"
   }
 }
